# IQlizer

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/gongity/iqlizer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml  new.xml
app/src/main/cpp/: CMakeLists.txt  audioengine.cpp
app/src/main/java/com/gongity/iqlizer/: AudioIDReceiver.kt  AudioService.kt  MainActivity.kt  MediaNotificationListener.kt
app/src/main/java/com/gongity/iqlizer/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/: themes.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/gongity/iqlizer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
